syntax = "proto3";

package sync_proto;

import "common.proto";


message GetBlockHeaders
{
    uint32 request_id = 1;

    common_proto.FieldElement start_block = 2; //block hash of the starting block
    uint64 count = 3; //how many block, at most, to retrieve from this requested starting point
    uint64 size_limit = 4; //limit on size of returned messages.

    bool backward = 5; //TRUE iff the order of headers returned should be in descending order

}

/*
    A response to GetBlockHeaders, returning a consecutive `count` of blocks (or less if there are less available)
 */
message BlockHeaders
{
    uint32 request_id = 1;

    repeated common_proto.BlockHeader headers = 2;
}
